--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Privacy Policy</title>
-    <style>
-      body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        padding: 1em;
-      }
-    </style>
+    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <strong>Privacy Policy</strong>
